# web4

./: Cargo.toml
lib/web4/: application.ex  router.ex
src/: address_bar.js  index.html  main.rs  tab.html  tab.js
src/engine/: mod.rs
src/llm/: mod.rs
src/network/: mod.rs
ui/: index.html  main.js  renderer.js
